Fixed issues in heading/nav spacing

--- a/themes/hugo-ror/assets/sass/partials/_hugo-ror.scss
+++ b/themes/hugo-ror/assets/sass/partials/_hugo-ror.scss
@@ -7070,7 +7070,7 @@ img.ror-id {
   margin-bottom: 0;
 }
 .page-banner {
-    margin-top: -70px;
+    /*margin-top: -70px;*/
  }
 .page-banner h1 {
 	color: #fff !important;
