--- a/themes/hugo-ror/assets/sass/partials/_nav.scss
+++ b/themes/hugo-ror/assets/sass/partials/_nav.scss
@@ -11,3 +11,7 @@
         transition: all .3s ease 0s;
     }
 }
+
+li.nav-item {
+    margin-bottom: 0;
+}
